--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
 		"node/callback-return": "off",
 		"node/handle-callback-err": "error",
 		"node/no-callback-literal": "error",
+		"node/no-extraneous-import": "off",
 		"node/no-missing-import": "off",
 		"node/no-missing-require": "off",
 		"node/no-unsupported-features/es-syntax": "off",
