--- a/package.json
+++ b/package.json
@@ -177,12 +177,11 @@
 	},
 	"devDependencies": {
 		"@redocly/openapi-core": "1.0.0-beta.120",
-		"@typescript-eslint/eslint-plugin": "5.48.0",
-		"@typescript-eslint/parser": "5.48.0",
 		"@types/bcryptjs": "2.4.2",
 		"@types/cheerio": "0.22.18",
 		"@types/double-ended-queue": "2.1.2",
 		"@types/fluent-ffmpeg": "2.1.20",
+		"@types/glob": "8.0.0",
 		"@types/js-yaml": "4.0.5",
 		"@types/jsdom": "20.0.1",
 		"@types/jsonld": "1.5.6",
@@ -226,6 +225,8 @@
 		"@types/webpack": "5.28.0",
 		"@types/websocket": "1.0.5",
 		"@types/ws": "8.5.4",
+		"@typescript-eslint/eslint-plugin": "5.48.0",
+		"@typescript-eslint/parser": "5.48.0",
 		"cross-env": "7.0.3",
 		"eslint": "8.31.0",
 		"eslint-plugin-node": "11.1.0",
