--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"autwh": "0.1.0",
 		"aws-sdk": "2.1289.0",
 		"bcryptjs": "2.4.3",
+		"bootstrap": "4.6.2",
 		"bootstrap-vue": "2.23.1",
 		"browser-image-resizer": "2.4.1",
 		"bull": "4.10.2",
@@ -110,6 +111,7 @@
 		"nested-property": "4.0.0",
 		"nodemailer": "6.8.0",
 		"nprogress": "0.2.0",
+		"oauth": "0.10.0",
 		"os-utils": "0.0.14",
 		"parse5": "6.0.1",
 		"parsimmon": "1.18.1",
@@ -130,6 +132,7 @@
 		"request-stats": "3.0.0",
 		"rimraf": "3.0.2",
 		"rndstr": "1.0.0",
+		"seedrandom": "3.0.5",
 		"sharp": "0.29.3",
 		"showdown": "2.1.0",
 		"showdown-highlightjs-extension": "0.1.2",
