--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"eventemitter3": "4.0.7",
 		"file-type": "16.5.4",
 		"fluent-ffmpeg": "2.1.2",
+		"glob": "8.0.3",
 		"got": "11.8.6",
 		"gulp": "4.0.2",
 		"gulp-clean-css": "4.3.0",
@@ -234,5 +235,15 @@
 		"eslint": "8.31.0",
 		"eslint-plugin-node": "11.1.0",
 		"mocha": "10.2.0"
+	},
+	"packageManager": "pnpm@7.24.3",
+	"pnpm": {
+		"packageExtensions": {
+			"diskusage": {
+				"optionalDependencies": {
+					"node-gyp": "*"
+				}
+			}
+		}
 	}
 }
