--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
     - run: node cli/diag-environment.js
-    - run: sudo sed -i'' -E 's/http:\/\/(azure.archive|security).ubuntu.com/http:\/\/ftp.tsukuba.wide.ad.jp/' /etc/apt/sources.list
+    - run: sudo sed -i'' -E 's/http:\/\/(azure.archive|security).ubuntu.com/http:\/\/mirror.us.leaseweb.net/' /etc/apt/sources.list
     - run: cat /etc/apt/sources.list
     - run: sudo apt-get update -y
     - run: sudo apt-get install -y --no-install-recommends ffmpeg
