--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,19 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": [
 		"config:base"
+	],
+	"packageRules": [
+		{
+			"matchPackageNames": ["chalk"],
+			"allowedVersions": "< 5"
+		},
+		{
+			"matchPackageNames": ["file-type"],
+			"allowedVersions": "< 17"
+		},
+		{
+			"matchPackageNames": ["got"],
+			"allowedVersions": "< 12"
+		}
 	]
 }
