--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [14.x, 16.x, 18.x]
 
     services:
       mongo:
@@ -33,7 +33,6 @@ jobs:
     - run: node cli/diag-environment.js
     - run: sudo apt-get update -y
     - run: sudo apt-get install -y --no-install-recommends ffmpeg
-    - run: corepack enable
     - run: pnpm i --frozen-lockfile
     - run: pnpm build
     - run: ls built/meta.json
