--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"bull": "4.10.2",
 		"cafy": "15.2.1",
 		"chalk": "4.1.2",
+		"check-disk-space": "3.3.1",
 		"cheerio": "0.22.0",
 		"content-disposition": "0.5.4",
 		"crc-32": "1.2.2",
@@ -58,7 +59,6 @@
 		"cssnano": "5.1.14",
 		"date-fns": "2.29.3",
 		"deepcopy": "0.6.3",
-		"diskusage": "1.1.3",
 		"double-ended-queue": "2.1.0-0",
 		"escape-regexp": "0.0.1",
 		"eventemitter3": "4.0.7",
@@ -236,14 +236,5 @@
 		"eslint-plugin-node": "11.1.0",
 		"mocha": "10.2.0"
 	},
-	"packageManager": "pnpm@7.25.0",
-	"pnpm": {
-		"packageExtensions": {
-			"diskusage": {
-				"optionalDependencies": {
-					"node-gyp": "*"
-				}
-			}
-		}
-	}
+	"packageManager": "pnpm@7.25.0"
 }
