--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 		"source-map": "^0.7.4"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "3.272.0",
+		"@aws-sdk/lib-storage": "3.272.0",
+		"@aws-sdk/node-http-handler": "3.272.0",
 		"@fortawesome/fontawesome-svg-core": "1.2.36",
 		"@fortawesome/free-brands-svg-icons": "5.15.4",
 		"@fortawesome/free-regular-svg-icons": "5.15.4",
@@ -43,7 +46,6 @@
 		"autobind-decorator": "2.4.0",
 		"autosize": "4.0.2",
 		"autwh": "0.1.0",
-		"aws-sdk": "2.1318.0",
 		"bcryptjs": "2.4.3",
 		"bootstrap": "4.6.2",
 		"bootstrap-vue": "2.23.1",
