--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"bull": "4.10.4",
 		"cafy": "15.2.1",
 		"chalk": "4.1.2",
-		"cheerio": "0.22.0",
+		"cheerio": "1.0.0-rc.12",
 		"content-disposition": "0.5.4",
 		"crc-32": "1.2.2",
 		"css-loader": "6.7.3",
