--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"glob": "8.1.0",
 		"got": "11.8.6",
 		"gulp": "4.0.2",
-		"gulp-clean-css": "4.3.0",
+		"gulp-postcss": "9.0.1",
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.4",
 		"gulp-sourcemaps": "3.0.0",
