自インスタンスが関係してないLikeを無視するオプション #4516

--- a/.config/example.yml
+++ b/.config/example.yml
@@ -93,8 +93,11 @@ drive:
 # Disable Federation: (default: false)
 #disableFederation: true
 
-# Ignore AP forwarded activities (default: false)
+# 自インスタンスが関係してないActivityを無視する (default: false, リレー使用時には有効にしてはいけない)
 #ignoreApForwarded: true
+
+# 自インスタンスが関係してないLike (リアクション) を無視する (default: false)
+#ignoreForeignLike: true
 
 # Disable URL Preview (default: false)
 #disableUrlPreview: true
