--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
 		"showdown": "2.1.0",
 		"showdown-highlightjs-extension": "0.1.2",
 		"speakeasy": "2.0.0",
+		"stopwords-en": "0.3.0",
+		"stopwords-zh": "0.4.0",
 		"stringz": "2.1.0",
 		"stylus": "0.59.0",
 		"stylus-loader": "7.1.3",
