MongoDBでUNIX socketをサポート (#4657)

--- a/.config/example.yml
+++ b/.config/example.yml
@@ -10,6 +10,7 @@ port: 3000
 mongodb:
   host: localhost
   port: 27017
+  #path: /tmp/mongodb-27017.sock
   db: misskey
   user: example-misskey-user
   pass: example-misskey-pass
