UNIXドメインソケットでListen出来るように (#4655)
* Support UNIX socket listening

* a

--- a/.config/example.yml
+++ b/.config/example.yml
@@ -5,7 +5,9 @@ url: https://example.tld/
 port: 3000
 
 # Listen address (default is probably any)
-# addr: '127.0.0.0'
+#addr: '127.0.0.0'
+# or Listen UNIX socket
+#socket: '/home/misskey/misskey/unix.sock'
 
 mongodb:
   host: localhost
