--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@swc/core": "1.3.64",
 		"animejs": "3.2.1",
 		"apexcharts": "3.33.2",
+		"async-ratelimiter": "1.3.9",
 		"autobind-decorator": "2.4.0",
 		"autosize": "4.0.2",
 		"autwh": "0.1.0",
@@ -123,7 +124,6 @@
 		"pug": "3.0.2",
 		"punycode": "2.3.0",
 		"qrcode": "1.5.1",
-		"ratelimiter": "3.4.1",
 		"reconnecting-websocket": "4.4.0",
 		"redis-lock": "0.1.4",
 		"rename": "1.0.4",
