--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "misskey",
 	"author": "mei23 <m@m544.net>",
-	"version": "10.102.666-m544",
+	"version": "10.102.666-m544-1",
 	"codename": "m544",
 	"repository": {
 		"type": "git",
