--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"bootstrap-vue": "2.23.1",
 		"browser-image-resizer": "2.4.1",
 		"bull": "4.10.4",
+		"cacheable-lookup": "6.1.0",
 		"cafy": "15.2.1",
 		"chalk": "4.1.2",
 		"content-disposition": "0.5.4",
